name:          yteratee
version:       0.8.5.0
synopsis:      Iteratee-based I/O
description:
  Clone of iteratee library. Has same interface as original, and simpler code.
  The Iteratee monad provides strict, safe, and functional I/O. In addition to
  pure Iteratee processors, file IO and combinator functions are provided.

  See @Data.Yteratee@ for full documentation.
category:      System, Data
author:        Sergey Mironov
maintainer:    Sergey Mironov <ierton@gmail.com>
license:       BSD3
license-file:  LICENSE
homepage:      https://github.com/ierton/yteratee
tested-with:   GHC == 7.0.3, GHC == 6.12.3
stability:     experimental

cabal-version: >= 1.6
build-type:    Simple

extra-source-files:
  README

flag splitBase
  description: Use the split-up base package.

library
  hs-source-dirs:
    src

  if flag(splitBase)
    build-depends:
      base >= 3 && < 6
  else
    build-depends:
      base < 3

  if os(windows)
    cpp-options: -DUSE_WINDOWS
    exposed-modules:
      Data.Yteratee.IO.Windows
  else
    cpp-options: -DUSE_POSIX
    exposed-modules:
      Data.Yteratee.IO.Posix
      Data.Yteratee.IO.Fd
    build-depends:
      unix >= 2 && < 3

  build-depends:
    ListLike                  >= 1.0     && < 4,
    MonadCatchIO-transformers >  0.2     && < 0.3,
    bytestring                >= 0.9     && < 0.10,
    containers                >= 0.2     && < 0.5,
    parallel                  >= 2       && < 4,
    transformers              >= 0.2     && < 0.3,
    mtl                       >= 1.1

  exposed-modules:
    Data.Yteratee
    Data.Yteratee.Base
    Data.Yteratee.Binary
    Data.Yteratee.ListLike
    Data.Yteratee.IO
    Data.Yteratee.IO.ReadableChunk
    Data.Yteratee.IO.Handle

  other-modules:
    Data.Yteratee.IO.Base

  ghc-options:   -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

  if flag(splitBase)
    build-depends:
      base >= 3 && < 5
  else
    build-depends:
      base < 3

source-repository head
  type:     git
  location: https://github.com/ierton/yteratee
